--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -7,3 +7,4 @@
     Project collaboration by
     = link_to 'Teambox', 'http://teambox.com'
 
+%div{ :style => "background-image: url(http://teambox.com/logo.png/#{Teambox.config.app_domain})"}
