Adding padding to the title of a thread
Otherwise, the .actions menu would limit the width of the body beneath

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -234,6 +234,7 @@ form.convert_comment
     float: right
     .name
       font-size: 12px
+      margin-bottom: 2px
       a
         font-size: 12px
         font-weight: bold
