--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -15,6 +15,8 @@
   - else
     = project_primer
 
+  = javascript_projects_people @projects
+
 - content_for :column do
   = new_project_link
   = #my_tasks(current_user.assigned_tasks(:all))
