--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -1,4 +1,5 @@
 = render_task(@current_project,@task_list,@task,@comment)
+= javascript_projects_people [@current_project]
 
 - content_for :column do
   = task_list_column(@current_project,@task)
