Don't have multiple forms with the same id: #new_comment

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -42,7 +42,7 @@
           +rounded(3px)
       .block
         width: 510px
-  form#new_comment
+  form.new_comment
     border-left: 4px solid #eee
     background-color: #fafafa
     margin: 0 0 0 70px
