--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -14,7 +14,7 @@ span.comments_count
     width: 16px
     text-align: center
 
-form#new_comment
+form.new_comment
   padding-bottom: 3px
   margin-bottom: 30px
   span.attach_label
