--- a/app/views/shared/_project_navigation.html.erb
+++ b/app/views/shared/_project_navigation.html.erb
@@ -56,12 +56,13 @@ unless location_name? %w(welcome_users new_projects show_users edit_users new_av
           t.tab_index = 150
         end
 
-        add_tab do |t|
-          t.named t('.conversations')
-          t.links_to  project_conversations_path(project)
-          t.highlights_on :controller => :conversations
-          t.tab_index = 151
-        end
+        # conversations are accessible through Project#show sidebar
+        #add_tab do |t|
+        #  t.named t('.conversations')
+        #  t.links_to  project_conversations_path(project)
+        #  t.highlights_on :controller => :conversations
+        #  t.tab_index = 151
+        #end
 
         add_tab do |t|
           t.named t('.task_lists')
