--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -3,7 +3,7 @@
 - thread_link = thread.is_a?(Task) ? [thread.task_list.project, thread.task_list, thread] : [thread.project, thread]
 - comments = thread.comments
 .thread{ :id => "thread_#{thread_id}" }
-  -if thread.is_a?(Conversation) and thread.simple and comments.size > 0
+  - if thread.is_a?(Conversation) and thread.simple and comments.size > 0
     = render :partial => 'comments/comment', :locals => { :comment => comments.pop, :simpleconv => true }
   - else
     .title
@@ -13,13 +13,13 @@
         = posted_date(thread.created_at)
       %span.starter
         = link_to(thread.user.name, thread.user) if thread.user
-        = t("activities.thread.created.#{thread.class.to_s.downcase}")
-      %strong
-        = link_to thread, thread_link
-      - unless @current_project
-        %span.project
-          = t('common.in_project')
-          = link_to thread.project, thread.project
+        = t("activities.thread.created.#{thread.class.to_s.downcase}", :project => thread.project.name)
+        = activity_project_link(thread.project)
+      %span.thread_title
+        = link_to thread, thread_link, :class => thread.class.to_s.downcase
+        - if thread.is_a?(Task)
+          = t('.on_task_list')
+          = link_to thread.task_list, [thread.task_list.project, thread.task_list], :class => 'task_list'
   .comments{ :id => "thread_#{thread_id}_comments" }
     = render :partial => 'activities/thread_comments', :locals => { :comments => comments, :thread => thread }
   .reply{ :id => "thread_#{thread_id}_reply" }
