Removing micro avatars from user's activity page

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -30,7 +30,9 @@ $micro_size: 24px
       display: none
     .block
       width: 620px
-
+  .activity
+    .micro_avatar
+      display: none
 
 .unconfirmed_email_users
   .content
