Bigger text for task and conversation titles in threads

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -26,6 +26,9 @@
       a
         padding-left: 20px
         font-weight: bold
+        &.conversation, &.task
+          padding-left: 23px
+          font-size: 15px
         &.conversation
           background: url(/images/comment.gif) no-repeat left
         &.task
