Make it clear that page descriptions don't allow text styles.

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -34,11 +34,9 @@
   .content
     h2, form
       margin-left: 20px
-    input#page_name
+    input#page_name, input#page_description
       width: 580px
-    textarea#page_description
-      width: 580px
-      height: 50px
+    input#page_description
       font-size: 12px
     .watchers
       width: 570px
