--- a/app/views/pages/_fields.haml
+++ b/app/views/pages/_fields.haml
@@ -8,4 +8,4 @@
   .label
     = f.label :description, t('.description')
     .description= t('.description_description')
-  = f.text_area :description
+  = f.text_field :description
