Adding Screenflash, a JS method to display popup notifications

--- a/app/styles/_tooltips.sass
+++ b/app/styles/_tooltips.sass
@@ -38,3 +38,20 @@
       margin: 10px 0
     a
       display: inline
+
+#screenflash
+  display: none
+  position: fixed
+  z-index: 10000
+  bottom: 20px
+  right: 20px
+  background: rgb(50, 50, 50)
+  background: rgba(0, 0, 0, 0.8)
+  color: white
+  width: auto
+  height: auto
+  max-width: 450px
+  padding: 10px
+  font-size: 14px
+  +rounded(10px)
+
