--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -35,5 +35,6 @@
         - unless content_for_column.blank?
           .column_wrap
             .column#column= content_for_column
-
       = footer
+
+#screenflash= "placeholder"
