--- a/app/views/emailer/reset_password.haml
+++ b/app/views/emailer/reset_password.haml
@@ -1,1 +1,12 @@
-= "#{@user.name}, your password has been reset."
+.email{ :style => email_global }
+  %p{ :style => email_text(:small) }
+    = t('emailer.common.do_not_answer')
+
+  %p= t('emailer.reset_password.hey', :user_name => @user.name)
+
+  .box{ :style => email_box }
+    %p= t('emailer.reset_password.successfully_reset')
+
+  .footer{ :style => email_text(:small) }
+    %p= t('emailer.reset_password.report_abuse', :email => @user.email)
+    %p= t('emailer.reset_password.problems', :support => APP_CONFIG['support'])
