fix Comment.watch_edit error on chrome, re-add =javscripts partial for analytics

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -36,5 +36,6 @@
           .column_wrap
             .column#column= content_for_column
       = footer
-
+      	 	
+    = javascripts
 #screenflash= "placeholder"
