Rails.env and StringInquirer instead RAILS_ENV inside app folder

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,7 +16,7 @@
     = yield :js_includes
     - javascript_tag do
       = yield :js_templates
-  %body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}", :reload_url => reload_url}
+  %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}", :reload_url => reload_url}
     = javascript_include_tag 'modernizr', 'environment'
     = strip(@current_project)
     .container
