--- a/app/views/layouts/application.m.haml
+++ b/app/views/layouts/application.m.haml
@@ -6,7 +6,7 @@
   = csrf_meta_tag
   = stylesheet_link_tag 'mobile', :media => :all
 
-%body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}"}
+%body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}"}
   #header
     = render 'shared/header'
     = navigation(@current_project,current_user.projects,current_user.recent_projects)
