--- a/app/views/layouts/print.haml
+++ b/app/views/layouts/print.haml
@@ -5,7 +5,7 @@
     %title
       = @page_title || 'Teambox'
     = stylesheet_link_tag 'print', :media => :all
-  %body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}"}  
+  %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}"}  
     %h1= @page_title
     .container
       .wrapper
