--- a/app/views/shared/_search_bar.haml
+++ b/app/views/shared/_search_bar.haml
@@ -1,5 +1,9 @@
 - if current_user.can_search? || (@current_project && @current_project.user.can_search?)
   .search_bar
-    - form_tag search_path do
-      %input{ :name => 'search', :type => 'search', :placeholder => 'Search projects' }
+    - per_project = !current_user.can_search?
+    - search_destination = per_project ? project_search_path(@current_project) : search_path
+    - form_tag search_destination do
+      %input{ :name => 'search', :type => 'search',
+        :placeholder => per_project ? t('search.placeholder_in_project') : t('search.placeholder') }
+      = hidden_field_tag :project_id, @current_project
       = submit_tag
