enable multiple file uploads in upload area below comments

--- a/app/styles/_uploads.sass
+++ b/app/styles/_uploads.sass
@@ -111,6 +111,9 @@ $upload_icon_width: 48px
     padding:
       bottom: 4px
     border-bottom: solid 1px rgb(210, 210, 210)
+  input[type=file]
+    display: block
+    margin-bottom: .7em
 
 .index_uploads
   .content
