--- a/app/views/uploads/_upload_area.haml
+++ b/app/views/uploads/_upload_area.haml
@@ -4,4 +4,4 @@
   - form.object.uploads.build
 
   - form.fields_for :uploads do |f|
-    = f.file_field :asset, :size => 25, :id => 'upload_file'
+    = f.file_field :asset, :id => 'upload_file'
