fix RJS bug when commenting tasks, there still a few bug to fix in rjs with forms reset that came with this change: http://github.com/teambox/teambox/commit/b50edd79635849e592e3e754dbd1ccd91357ad4e

--- a/app/views/tasks/_fields.html.haml
+++ b/app/views/tasks/_fields.html.haml
@@ -3,6 +3,7 @@
 .name.text_field
   = f.label :name, t('.name')
   = f.text_field :name, :autofocus => true
+  = last_comment_input
 - if task.new_record?
   %p.optional= t('.optional')
   .body.text_field
