Differentiating the first calendar link

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -105,11 +105,14 @@
       font-size: 13px
       padding-left: 22px
       background: url(/images/calendar_date_select/calendar.gif) no-repeat left
-  .calendar_links
+  .calendar_links, .calendar_links_all
     font-size: 13px
     padding-left: 25px
     margin: 8px 0
     background: url(/images/calendar_date_select/calendar.gif) no-repeat left
+  .calendar_links_all
+    margin-bottom: 15px
+    font-weight: bold
   .print
     margin-top: 5px
     a
