--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -322,7 +322,7 @@ form#new_project, form.edit_project, form.edit_hook, form.new_hook
     font-size: 12px
     color: rgb(150, 150, 150)
   #activities
-    .comment, .activity, .upload
+    .comment, .activity, .upload, .thread
       .author
 
       .project, .project_arr
