--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -318,7 +318,7 @@ form#new_project, form.edit_project
     font-size: 12px
     color: rgb(150, 150, 150)
   #activities
-    .comment, .activity, .upload
+    .comment, .activity, .upload, .thread
       .author
 
       .project, .project_arr
