Simplifying user avatars with rounded corners

--- a/app/views/activities/_create_person.m.haml
+++ b/app/views/activities/_create_person.m.haml
@@ -1,5 +1,5 @@
 .activity
-  = thumb_avatar(person.user, false)
+  = thumb_avatar(person.user)
   .container
     .date= posted_date activity.posted_date
     %span.user= person.user.name
