--- a/app/views/activities/_create_upload.m.haml
+++ b/app/views/activities/_create_upload.m.haml
@@ -1,5 +1,5 @@
 .activity
-  = thumb_avatar(activity.user, false)
+  = thumb_avatar(activity.user)
   .container
     .date= posted_date upload.created_at
     = activity_title(activity, false, true)
