--- a/app/views/comments/_comment.m.haml
+++ b/app/views/comments/_comment.m.haml
@@ -1,5 +1,5 @@
 .activity
-  = thumb_avatar(comment.user, false)
+  = thumb_avatar(comment.user)
   .container
     .date= posted_date comment.created_at
     = activity_title(comment, true, true)
