--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -106,32 +106,6 @@ $micro_size: 24px
       top: 20px
       bottom: 20px
 
-div.upload_avatar
-  .avatar
-    float: left
-    width: $thumb_size
-    height: $thumb_size
-    margin-right: 5px
-    a
-      display: block
-      width: $thumb_size
-      height: $thumb_size
-      margin-right: 5px
-      background: url(/images/avatar_thumb_corners.png)
-    a:hover
-      background: url(/images/avatar_thumb_corners_hover.png)
-  p.actions
-    padding-top: 2px
-    margin: 0px
-    a
-      display: block
-      font-size: 12px
-      color: rgb(120, 120, 120)
-      margin-top: 5px
-      text-decoration: underline
-    a:hover
-      text-decoration: none
-
 .new_user_avatar
   float: left
   width: $thumb_size
@@ -151,8 +125,6 @@ div.upload_avatar
   margin-top: 10px
 
 .show_users
-  .content
-
   .column_wrap
     .profile
       margin-bottom: 20px
@@ -316,35 +288,18 @@ div.upload_avatar
     &.stopped
       color: rgb(120, 50, 50)
 
-.thumb_avatar
+a.thumb_avatar
   float: left
   width: $thumb_size
   height: $thumb_size
-  margin-right: 10px
-  a
-    display: block
-    width: $thumb_size
-    height: $thumb_size
-    margin-right: 5px
-    &.round_corners
-      background: url(/images/avatar_thumb_corners.png)
-    &.round_corners:hover
-      background: url(/images/avatar_thumb_corners_hover.png)
+  margin-right: 15px
+  +rounded(5px)
 
-.micro_avatar
+a.micro_avatar
   float: left
   width: $micro_size
   height: $micro_size
   margin-right: 10px
-  a
-    display: block
-    width: $micro_size
-    height: $micro_size
-    margin-right: 5px
-    &.round_corners
-      background: url(/images/avatar_thumb_corners.png)
-    &.round_corners:hover
-      background: url(/images/avatar_thumb_corners_hover.png)
 
 .card
   font-size: 12px
