--- a/app/views/activities/_create_task.m.haml
+++ b/app/views/activities/_create_task.m.haml
@@ -1,5 +1,5 @@
 .activity
-  = thumb_avatar(activity.user, false)
+  = thumb_avatar(activity.user)
   .container
     %span.user= activity.user.short_name
     = t(".#{activity.action_type}")
