Converting Trash and Edit icons to sprites with hover states
Deleting obsolete images
Removing obsolete code (unread comments)

--- a/app/views/dividers/_divider.haml
+++ b/app/views/dividers/_divider.haml
@@ -3,4 +3,4 @@
     = render 'dividers/actions', :divider => divider
   %h3
     %span
-      = divider.name
+      = divider.name.empty?? '&nbsp;' : divider.name
