--- a/app/views/dividers/_actions.haml
+++ b/app/views/dividers/_actions.haml
@@ -1,11 +1,10 @@
 %p.actions
   %span
-    = link_to pencil_image, edit_project_page_divider_path(divider.project, divider.page, divider),
-        :'data-remote' => true
+    = link_to '', edit_project_page_divider_path(divider.project, divider.page, divider),
+        :'data-remote' => true, :class => 'edit_icon'
     = loading_action_image("divider_#{divider.id}", true)
-    
-    = link_to trash_image, project_page_divider_path(divider.project, divider.page, divider),
-        :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm'), :class => 'widget_delete'
+    = link_to '', project_page_divider_path(divider.project, divider.page, divider),
+        :'data-remote' => true, :'data-method' => 'delete', :'data-confirm' => t('.delete_confirm'), :class => 'widget_delete trash_icon'
     = loading_action_image("delete_divider_#{divider.id}", true)
 %p.actions.handle
   %span
