--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -6,13 +6,11 @@
   .inner
     .taskStatus	
       - if editable and !task.archived?
-        %div{:style => 'height:0px;'}
-          = task_drag_link(task)
+        %div{:style => 'height:0px;'}= task_drag_link(task)
       = task_status(task,:content)
     .taskName{ :class => "task_item_#{task.status_name}"}
-      %span.status
-        = localized_status_name(task)
-      = link_to task.name, project_task_list_task_path(project,task_list,task), :class => 'name'
+      %span.status= localized_status_name(task)
+      = link_to task, project_task_list_task_path(project,task_list,task), :class => :name
       - unless (task.due_on.nil? && task.unassigned?) || task.closed?
         %span.assigned
           = due_on(task) if task.due_on
