Wide "show more" button

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -355,3 +355,10 @@ form#new_project, form.edit_project
           bottom: 25px
         &.center
           padding-left: 200px
+
+#show_more_button
+  margin-top: 40px
+  .activity_paginate_link
+    width: 100%
+    text-align: center
+ 
